# ros_socket_adaptor

./: RAEDME  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/ros_socket_adaptor/: data.h
devel/lib/pkgconfig/: ros_socket_adaptor.pc
devel/lib/python3/dist-packages/ros_socket_adaptor/msg/: _data.py
devel/lib/ros_socket_adaptor/: controller  controller1  controller2
devel/share/common-lisp/ros/ros_socket_adaptor/msg/: _package.lisp  _package_data.lisp  data.lisp  ros_socket_adaptor-msg.asd
devel/share/gennodejs/ros/ros_socket_adaptor/msg/: _index.js  data.js
devel/share/ros_socket_adaptor/cmake/: ros_socket_adaptor-msg-extras.cmake  ros_socket_adaptor-msg-paths.cmake  ros_socket_adaptorConfig.cmake
devel/share/roseus/ros/ros_socket_adaptor/: manifest.l
devel/share/roseus/ros/ros_socket_adaptor/msg/: data.l
src/ros_socket_adaptor/: CMakeLists.txt  package.xml
src/ros_socket_adaptor/data/: traj_example.txt
src/ros_socket_adaptor/msg/: data.msg
src/ros_socket_adaptor/src/client/: CMakeLists.txt  client  client.cpp  client1.cpp  client2.cpp  io_file.cpp  test.cpp
src/ros_socket_adaptor/src/client/dev/: MH01.txt  io_file  io_file.cpp  test  test.cpp  traj_example.txt
src/ros_socket_adaptor/src/server/: controller.cpp  controller1.cpp  controller2.cpp
